--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "flyio": "^0.6.0",
     "mpvue": "^1.0.11",
     "mpvue-router-patch": "^0.2.1",
     "vue-axios": "^2.1.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "wx": "0.0.36"
   },
   "devDependencies": {
     "mpvue-loader": "^1.1.2",
