--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flyio": "^0.6.0",
     "mpvue": "^1.0.11",
     "mpvue-router-patch": "^0.2.1",
+    "vue": "^2.5.17",
     "vue-axios": "^2.1.3",
     "vuex": "^3.0.1",
     "wx": "0.0.36"
